feat: s3, router 기능

--- a/views/detail.ejs
+++ b/views/detail.ejs
@@ -12,6 +12,7 @@
     <div class="detail-bg">
         <h4><%= data.title %></h4>
         <p><%= data.content %></p>
+        <img src="<%= data.img %>">
     </div> 
     
 </body>
